Remove long hash (#28)
* remove long-hash element

* minor

* fix paper-item style

--- a/src/looper-page/simple-toolbar.html
+++ b/src/looper-page/simple-toolbar.html
@@ -1,53 +1,70 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <!-- <link rel="import" href="../../bower_components/paper-button/paper-button.html"> -->
 <dom-module id="simple-toolbar" fit>
-  <template>
-    <style include="shared-styles">
-     :host {
-      display: block;
+    <template>
+        <style is="custom-style" include="iron-flex iron-flex-alignment app-grid-style"></style>
+        <style include="shared-styles">
+         :host {
+            display: block;
+        }
+
+        paper-button {
+            height: 64px;
+        }
+
+        app-toolbar {
+            color: #fff;
+            background-color: var(--app-primary-color);
+        }
+
+        paper-icon-button {
+            color: white;
+        }
+
+        iron-icon {
+            display: none;
+            color: rgba(255, 255, 255, .54);
+        }
+
+        iron-icon[show] {
+            display: inherit;
+        }
+        </style>
+        <app-toolbar>
+            <a href="[[backLink]]" class="styless-link">
+                <paper-icon-button icon='arrow-back' noink></paper-icon-button>
+            </a>
+            <div spacer></div>
+            [[title]]
+            <iron-icon show$="[[shouldShow()]]" icon="chevron-right"></iron-icon>
+            [[formatId()]]
+        </app-toolbar>
+    </template>
+    <script>
+    class SimpleToolbar extends Polymer.Element {
+        static get is() { return 'simple-toolbar'; }
+
+        static get properties() {
+            return {
+                backLink: {
+                    type: String,
+                    // reflectToAttribute: true
+                },
+                title: String,
+                id: String
+            };
+        }
+
+        shouldShow() {
+            if (this.id) return true
+            else return false;
+        }
+        formatId() {
+            if (this.id) return this.id;
+            else return "";
+        }
     }
 
-    paper-button {
-      height: 64px;
-    }
-
-    app-toolbar {
-      color: #fff;
-      background-color: var(--app-primary-color);
-    }
-
-    paper-icon-button {
-      color: white;
-    }
-    </style>
-    <app-toolbar>
-      <a href="[[backLink]]" class="styless-link">
-        <paper-icon-button icon='arrow-back' noink></paper-icon-button>
-      </a>
-      <div spacer></div>
-      <div condensed-title>[[title]][[formatId()]]</div>
-    </app-toolbar>
-  </template>
-  <script>
-  class SimpleToolbar extends Polymer.Element {
-    static get is() { return 'simple-toolbar'; }
-
-    static get properties() {
-      return {
-        backLink: {
-          type: String,
-          // reflectToAttribute: true
-        },
-        title: String,
-        id: String
-      };
-    }
-    formatId() {
-      if (this.id) return (" / " + this.id);
-      else return "";
-    }
-  }
-
-  window.customElements.define(SimpleToolbar.is, SimpleToolbar);
-  </script>
+    window.customElements.define(SimpleToolbar.is, SimpleToolbar);
+    </script>
 </dom-module>
