--- a/src/market/recent-fills.html
+++ b/src/market/recent-fills.html
@@ -42,8 +42,7 @@
                 </template>
                 <template>
                     <div class="left-aligned">
-                        <a href="#/fill">
-                            <long-hash hash="[[item.txHash]]"></long-hash>
+                        <a href="#/fill"><div class="long-hash">[[item.txHash]]</div>
                         </a>
                 </template>
                 </div>
