--- a/src/page-rings.html
+++ b/src/page-rings.html
@@ -30,7 +30,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                             <template>
                                 <div class="left-aligned">
                                     <a href="#/ring/[[item.ringhash]]">
-                                        <long-hash hash="[[item.ringhash]]"></long-hash>
+                                        <div class="long-hash">[[item.ringhash]]</div>
                                     </a>
                                 </div>
                             </template>
@@ -41,7 +41,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                             </template>
                             <template>
                                 <div class="left-aligned">
-                                    <long-hash hash="[[item.miner]]"></long-hash>
+                                    <div class="long-hash">[[item.miner]]</div>
                                 </div>
                             </template>
                         </vaadin-grid-column>
@@ -51,7 +51,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                             </template>
                             <template>
                                 <div class="left-aligned">
-                                    <long-hash hash="[[item.feeRecepient]]"></long-hash>
+                                    <div class="long-hash">[[item.feeRecepient]]</div>
                                 </div>
                             </template>
                         </vaadin-grid-column>
@@ -61,7 +61,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                             </template>
                             <template>
                                 <div class="left-aligned">
-                                    <long-hash hash="[[item.transactionHash]]"></long-hash>
+                                    <div class="long-hash">[[item.transactionHash]]</div>
                                 </div>
                             </template>
                         </vaadin-grid-column>
