--- a/src/page-fill.html
+++ b/src/page-fill.html
@@ -9,85 +9,72 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="shared-styles.html">
-
 <dom-module id="page-fill">
-  <template>
-    <style include="shared-styles">
-      :host {
-        display: block;
-      }
-      .hash {
-        width: 400px;
-        display: inline-block;
-        vertical-align: bottom;
-        text-overflow: ellipsis;
-        overflow: hidden;
-      }
-      a:link {
-        text-decoration: none;
-      }
-    </style>
-    <looper-page>
-      <simple-toolbar slot="secondary-toolbar" title="Fill" id="[[id]]" back-link="#/fills"></simple-toolbar>
-      <div class="sections">
-        <paper-card transparent>Fill</paper-card>
-        <paper-card>
-          <recent-fills filter-mine name="myfills"></recent-fills>
-        </paper-card>
-        <iron-ajax
-                auto
-                url="https://raw.githubusercontent.com/Loopring/mock-relay-data/master/fill.json"
-                handle-as="json"
-                last-response="{{order}}"
-                debounce-duration="300">
-        </iron-ajax>
-        <paper-card transparent>Orders</paper-card>
-        <paper-card>
-          <div class="horizontal layout">
-            <div class="vertical layout flex">
-              <paper-item class="flex">
-                <paper-item-body two-line>
-                  <div class="title"> Tx Hash</div>
-                  <div secondary><a href="#">[[order.result.txHash]]</a></div>
-                </paper-item-body>
-              </paper-item>
-              <paper-item class="flex">
-                <paper-item-body two-line>
-                  <div class="title "> Ring Hash</div>
-                  <div secondary><a href="#/ring/[[order.result.ringHash]]">[[order.result.ringHash]]</a></div>
-                </paper-item-body>
-              </paper-item>
-              <paper-item class="flex">
-                <paper-item-body two-line>
-                  <div class="title "> Orders</div>
-                  <div secondary>
-                    <template is="dom-repeat" items="[[order.result.orders]]" as="orderItem">
-                      <div><a href="#/order/[[orderItem]]">[[orderItem]]</a></div>
-                    </template>
-                  </div>
-                </paper-item-body>
-              </paper-item>
+    <template>
+        <style is="custom-style" include="iron-flex iron-flex-alignment iron-flex-factors"></style>
+        <style include="shared-styles">
+         :host {
+            display: block;
+        }
+        </style>
+        <looper-page>
+            <simple-toolbar slot="secondary-toolbar" title="Fill" id="[[id]]" back-link="#/fills"></simple-toolbar>
+            <div class="sections">
+                <paper-card transparent>Fill</paper-card>
+                <paper-card>
+                    <recent-fills filter-mine name="myfills"></recent-fills>
+                </paper-card>
+                <iron-ajax auto url="https://raw.githubusercontent.com/Loopring/mock-relay-data/master/fill.json" handle-as="json" last-response="{{order}}" debounce-duration="300">
+                </iron-ajax>
+                <paper-card transparent>Orders</paper-card>
+                <paper-card>
+                    <div class="horizontal wrap layout">
+                        <paper-item class="flex">
+                            <paper-item-body two-line>
+                                <div class="title"> Tx Hash</div>
+                                <div secondary>
+                                    <a href="#">
+                                        <div class="long-hash">[[order.result.txHash]]</div>
+                                    </a>
+                                </div>
+                            </paper-item-body>
+                        </paper-item>
+                        <paper-item class="flex">
+                            <paper-item-body two-line>
+                                <div class="title "> Ring Hash</div>
+                                <div secondary><a href="#/ring/[[order.result.ringHash]]">[[order.result.ringHash]]</a></div>
+                            </paper-item-body>
+                        </paper-item>
+                        <paper-item class="flex">
+                            <paper-item-body two-line>
+                                <div class="title "> Orders</div>
+                                <div secondary>
+                                    <template is="dom-repeat" items="[[order.result.orders]]" as="orderItem">
+                                        <div><a href="#/order/[[orderItem]]">[[orderItem]]</a></div>
+                                    </template>
+                                </div>
+                            </paper-item-body>
+                        </paper-item>
+                    </div>
+                </paper-card>
+                <div class="footer-spacer"></div>
+                <looper-footer></looper-footer>
             </div>
-          </div>
-        </paper-card>
-        <div class="footer-spacer"></div>
-        <looper-footer></looper-footer>
-      </div>
-    </looper-page>
-  </template>
-  <script>
-  class PageFill extends Polymer.Element {
-    static get is() {
-      return 'page-fill';
+        </looper-page>
+    </template>
+    <script>
+    class PageFill extends Polymer.Element {
+        static get is() {
+            return 'page-fill';
+        }
+        static get properties() {
+            return {
+                id: String,
+                keyValueArray: Array
+            };
+        }
     }
-    static get properties() {
-      return {
-        id: String,
-        keyValueArray: Array
-      };
-    }
-  }
 
-  window.customElements.define(PageFill.is, PageFill);
-  </script>
+    window.customElements.define(PageFill.is, PageFill);
+    </script>
 </dom-module>
