reformat with 4-space (#29)

--- a/src/looper-page/looper-notification-bar.html
+++ b/src/looper-page/looper-notification-bar.html
@@ -1,126 +1,126 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <dom-module id="looper-notification-bar" fit>
-  <template>
-    <style is="custom-style" include="iron-flex iron-flex-alignment app-grid-style"></style>
-    <style include="shared-styles">
-      :host {
-        display: block;
-      }
+    <template>
+        <style is="custom-style" include="iron-flex iron-flex-alignment app-grid-style"></style>
+        <style include="shared-styles">
+         :host {
+            display: block;
+        }
 
-      app-toolbar {
-        height: 36px;
-        color: black;
-        -webkit-transition:all 0.5s linear;
-        -moz-transition:all 0.5s linear;
-        -ms-transition:all 0.5s linear;
-        -o-transition:all 0.5s linear;
-        transition:all 0.5s linear;
-      }
+        app-toolbar {
+            height: 36px;
+            color: black;
+            -webkit-transition: all 0.5s linear;
+            -moz-transition: all 0.5s linear;
+            -ms-transition: all 0.5s linear;
+            -o-transition: all 0.5s linear;
+            transition: all 0.5s linear;
+        }
 
-      .inner {
-        width: 100%;
-        color: rgba(255, 255, 255, .78);
-        font-size: 16px;
-        text-align: center;
-        font-weight: 400;
-      }
+        .inner {
+            width: 100%;
+            color: rgba(255, 255, 255, .78);
+            font-size: 16px;
+            text-align: center;
+            font-weight: 400;
+        }
 
-      .innerLeft {
-        width: 98%;
-        @apply(--layout-horizontal);
-        @apply(--layout-center-justified);
-      }
+        .innerLeft {
+            width: 98%;
+            @apply(--layout-horizontal);
+            @apply(--layout-center-justified);
+        }
 
-      app-toolbar.notice {
-        background-color: var(--app-text-color);
-      }
+        app-toolbar.notice {
+            background-color: var(--app-text-color);
+        }
 
-      app-toolbar.warning {
-        background-color: var(--paper-amber-500);
-      }
+        app-toolbar.warning {
+            background-color: var(--paper-amber-500);
+        }
 
-      app-toolbar.error {
-        background-color: var(--app-red-color);
-      }
+        app-toolbar.error {
+            background-color: var(--app-red-color);
+        }
 
-      app-toolbar.visible {
-        visibility:visible;
-        opacity:10;
-      }
+        app-toolbar.visible {
+            visibility: visible;
+            opacity: 10;
+        }
 
-      app-toolbar.hidden {
-        visibility:hidden;
-        opacity:0;
-      }
+        app-toolbar.hidden {
+            visibility: hidden;
+            opacity: 0;
+        }
 
-      iron-icon {
-        padding-right: 16px;
-      }
-    </style>
-    <iron-ajax auto url="https://raw.githubusercontent.com/Loopring/mock-relay-data/master/notification.json" handle-as="json" last-response="{{notification}}" debounce-duration="300"></iron-ajax>
-    <app-toolbar class$="[[notification.category]] [[show]]">
-      <div class="inner horizontal layout">
-        <div class="innerLeft">
-          <iron-icon icon="social:notifications-none"></iron-icon>
-          <div>[[notification.message]]</div>
-        </div>
-        <div>
-          <a href="#" on-click="_close"><iron-icon icon="icons:close"></iron-icon></a>
-        </div>
-      </div>
-    </app-toolbar>
+        iron-icon {
+            padding-right: 16px;
+        }
+        </style>
+        <iron-ajax auto url="https://raw.githubusercontent.com/Loopring/mock-relay-data/master/notification.json" handle-as="json" last-response="{{notification}}" debounce-duration="300"></iron-ajax>
+        <app-toolbar class$="[[notification.category]] [[show]]">
+            <div class="inner horizontal layout">
+                <div class="innerLeft">
+                    <iron-icon icon="social:notifications-none"></iron-icon>
+                    <div>[[notification.message]]</div>
+                </div>
+                <div>
+                    <a href="#" on-click="_close">
+                        <iron-icon icon="icons:close"></iron-icon>
+                    </a>
+                </div>
+            </div>
+        </app-toolbar>
+        [[_getChanged(notification)]]
+    </template>
+    <script>
+    class LooperNotificationBar extends Polymer.Element {
+        static get is() { return 'looper-notification-bar'; }
 
-    [[_getChanged(notification)]]
+        static get properties() {
+            return {
+                notification: {
+                    type: Object
+                },
+                show: {
+                    type: String,
+                    value: "hidden"
+                }
+            };
+        }
 
-  </template>
-  <script>
-      class LooperNotificationBar extends Polymer.Element {
-          static get is() { return 'looper-notification-bar'; }
+        _getChanged(e) {
+            if (!e) {
+                return;
+            }
+            if (this.job) {
+                window.clearTimeout(this.job);
+                this.job = null;
+            }
+            this.show = "visible";
 
-          static get properties() {
-              return {
-                  notification: {
-                      type: Object
-                  },
-                  show: {
-                      type: String,
-                      value: "hidden"
-                  }
-              };
-          }
+            if (e.closable) {
+                var timeout = 5000; //set default timeout 5s
+                if (e.timeout && e.timeout > 0) {
+                    timeout = e.timeout;
+                }
+                var x = this;
+                this.job = window.setTimeout(function() {
+                    x.show = "hidden";
+                }, timeout);
+            }
+        }
 
-          _getChanged(e){
-              if(!e){
-                  return;
-              }
-              if (this.job) {
-                  window.clearTimeout(this.job);
-                  this.job = null;
-              }
-              this.show = "visible";
+        // Display a notificaiton with a timer.
+        display(e) {
+            this.notification = e;
+        }
 
-              if(e.closable){
-                  var timeout = 5000; //set default timeout 5s
-                  if(e.timeout && e.timeout >0){
-                      timeout = e.timeout;
-                  }
-                  var x = this;
-                  this.job = window.setTimeout(function(){
-                      x.show = "hidden";
-                  }, timeout);
-              }
-          }
+        _close() {
+            this.show = "hidden"
+        }
+    }
 
-          // Display a notificaiton with a timer.
-          display(e) {
-              this.notification = e;
-          }
-
-          _close(){
-              this.show = "hidden"
-          }
-      }
-
-      window.customElements.define(LooperNotificationBar.is, LooperNotificationBar);
-  </script>
+    window.customElements.define(LooperNotificationBar.is, LooperNotificationBar);
+    </script>
 </dom-module>
