--- a/src/market/recent-fills.html
+++ b/src/market/recent-fills.html
@@ -42,7 +42,8 @@
                 </template>
                 <template>
                     <div class="left-aligned">
-                        <a href="#/fill"><div class="long-hash">[[item.txHash]]</div>
+                        <a href="#/fill">
+                            <div class="long-hash">[[item.txHash]]</div>
                         </a>
                 </template>
                 </div>
