--- a/src/looper-page/ethereum-signer.html
+++ b/src/looper-page/ethereum-signer.html
@@ -1,21 +1,30 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <script src="../../bower_components/bignumber.js/bignumber.js"></script>
-<script src="../../bower_components/ethereum.js/dist/ethereum.min.js"></script>
+<script src="../../bower_components/ethereum.js/dist/ethereum.js"></script>
 <script src="../../bower_components/wallet-address-validator/dist/wallet-address-validator.min.js"></script>
+<script src="../../bower_components/browser-builds/dist/ethereumjs-all.js"></script>
+
+<script src="../../libs/bundle.js"></script>
 <dom-module id="ethereum-signer">
-  <script>
-  class EthreumSigner extends Polymer.Element {
-    static get is() { return 'ethereum-signer'; }
+    <template>
+        <span>[[sign()]]</span>
+    </template>
+    <script>
+        const test = require('crypto');
+        class EthreumSigner extends Polymer.Element {
+            static get is() {
+                return 'ethereum-signer';
+            }
 
-    static get properties() {
-      return {};
-    }
+            static get properties() {
+                return {};
+            }
 
-    sign(raw) {
-      return raw;
-    }
-  }
+            sign() {
+               return test.randomBytes(32).toString('hex');
+            }
+        }
 
-  window.customElements.define(EthreumSigner.is, EthreumSigner);
-  </script>
+        window.customElements.define(EthreumSigner.is, EthreumSigner);
+    </script>
 </dom-module>
